
syntax = "proto3";

option java_multiple_files = true;
option java_outer_classname = "HelloWorld";
option optimize_for = SPEED;

package com.github.diegogomesaraujo.greeter.grpc;

service Greeter {
	rpc SayHello(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
	string name = 1;
}

message HelloReply {
	string message = 1;
}